CLS 5 add messages count for block (#93)
