# cmd/api/docs/swagger.json
@@ -1827,6 +1827,10 @@
                     "type": "string",
                     "example": "0.0800000"
                 },
+                "messages_counts": {
+                    "type": "string",
+                    "example": "{MsgPayForBlobs:10,MsgUnjail:1}"
+                },
                 "supply_change": {
                     "type": "string",
                     "example": "8635234"
